# recallbox

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  README_OPENROUTER_SNIPPET.md  compose.yaml  dockerfile.www  makefile  pyproject.toml
.config/: config.yaml.example
db/: env.py
docker/www/: prestart.sh
docs/dev/: README.md  api.md  cli.md  database.md  docker.md  documentation.md  makefile.md  pypi.md  settings.md  testing.md
recallbox/: active_learning.py  cli.py  config.py  settings.py
recallbox/conf/: settings.py
recallbox/llm/: __init__.py  client.py
recallbox/rag/: engine.py
recallbox/services/: watcher.py
recallbox/store/: __init__.py  chromadb.py
recallbox/utils/: parsers.py
tests/: conftest.py  test_active_learning.py  test_cli.py  test_cli_test_data.py  test_config.py  test_config_loader.py  test_llm_client.py  test_llm_client_extra.py  test_models_init.py  test_services_db.py  test_settings.py  test_store_chromadb.py  test_www.py
tests/llm/: test_client.py
tests/rag/: test_engine.py
tests/services/: test_watcher.py
tests/store/: test_chromadb.py
